--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "darkaonline/l5-swagger": "*",
         "doctrine/dbal": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8",
-        "tymon/jwt-auth": "*"
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
